--- a/themes/next/assets/scss/components/buttons.scss
+++ b/themes/next/assets/scss/components/buttons.scss
@@ -88,6 +88,7 @@
             }
         }
     }
+    &:disabled,
     &.disabled {
         --background: var(--pale);
         --color: var(--text-light);
