--- a/themes/next/assets/scss/components/table.scss
+++ b/themes/next/assets/scss/components/table.scss
@@ -260,6 +260,12 @@
                         background: var(--pale-light);
                         border: 1px solid var(--border);
                     }
+                    .tooltip-entry {
+                        .tooltip-circle {
+                            vertical-align: top;
+                            margin: 2px 0 0 0;
+                        }
+                    }
                 }
                 th {
                     font-weight: 500;
