--- a/themes/next/client/mail_accounts.phtml
+++ b/themes/next/client/mail_accounts.phtml
@@ -1,49 +1,30 @@
 <!-- BDP: mail_feature -->
 <script>
+
     function action_delete(link, subject) {
         return jQuery.imscp.confirmOnclick(link, sprintf("<?= tojs(tr('Are you sure you want to delete this %%s account?')); ?>", subject));
     }
 
     $(function () {
-        var $oTable = $('.datatable').dataTable(
-            {
-                language: <?= getDataTablesPluginTranslations(); ?>,
-                displayLength: 10,
-                stateSave: true,
-                columnDefs: [ { sortable: false, targets: [5] }],
-                pagingType: "simple"
-            }
-        );
 
-        $(".dataTables_paginate").click(function () {
-            if ($oTable.find("tbody input[type=checkbox]:checked").length === $("tbody input[type=checkbox]:not(':disabled')").length) {
-                $oTable.find("thead input[type=checkbox],tfoot input[type=checkbox]").prop('checked', true);
-            } else {
-                $oTable.find("thead input[type=checkbox],tfoot input[type=checkbox]").prop('checked', false);
-            }
+        $('[data-dataTable]').find("tbody").on("click", "input[type=checkbox]:not(':disabled')", function () {
+            $('[data-dataTable]').find("thead input[type=checkbox],tfoot input[type=checkbox]").prop('checked', ($(this).find("input[type=checkbox]:checked").length === $("tbody input[type=checkbox]:not(':disabled')").length));
         });
 
-        $oTable.find("tbody").on("click", "input[type=checkbox]:not(':disabled')", function () {
-            if ($(this).find("input[type=checkbox]:checked").length === $("tbody input[type=checkbox]:not(':disabled')").length) {
-                $oTable.find("thead input[type=checkbox],tfoot input[type=checkbox]").prop('checked', true);
-            } else {
-                $oTable.find("thead input[type=checkbox],tfoot input[type=checkbox]").prop('checked', false);
-            }
-        });
-
-        $oTable.find("thead :checkbox, tfoot input[type=checkbox]").click(function (e) {
-            if ($oTable.find("tbody input[type=checkbox]:not(':disabled')").length !== 0) {
-                $oTable.find("input[type=checkbox]:not(':disabled')").prop('checked', $(this).is(':checked'));
+        $('[data-dataTable]').find("thead :checkbox, tfoot input[type=checkbox]").click(function (e) {
+            if ($('[data-dataTable]').find("tbody input[type=checkbox]:not(':disabled')").length !== 0) {
+                $('[data-dataTable]').find("input[type=checkbox]:not(':disabled')").prop('checked', $(this).is(':checked'));
             } else {
                 e.preventDefault();
             }
         });
 
-        $("input[type=submit]").click(function () {
+        $('input[type=submit]').click(function() {
+
             var input = this;
             input.blur();
 
-            if($("input[type=checkbox]:checked", $oTable.fnGetNodes()).length < 1) {
+            if($('input[type=checkbox]:checked').length < 1) {
                 alert("<?= tojs(tr('You must select at least one mail account to delete.')); ?>");
                 return false;
             }
@@ -53,112 +34,129 @@
                     $(input).closest("form").submit();
                 }
             });
+
         });
     });
+
 </script>
+
 <!-- BDP: mail_accounts -->
 <form action="mail_delete.php" method="post">
-    <table class="datatable">
-        <thead>
-        <tr>
-            <th><?= tohtml(tr('Mail')); ?></th>
-            <th><?= tohtml(tr('Type')); ?></th>
-            <th><?= tohtml(tr('Quota info')); ?></th>
-            <th><?= tohtml(tr('Status')); ?></th>
-            <th><?= tohtml(tr('Actions')); ?></th>
-            <th style="width:21px">
-                <label><input type="checkbox"></label>
-            </th>
-        </tr>
-        </thead>
-        <tfoot>
-        <tr>
-            <td colspan="5"><?= tohtml(tr('Total accounts: %s / %s', '{MAIL_TOTAL_MAIL_ACCOUNTS}', '{MAIL_ACCOUNTS_LIMIT}')); ?></td>
-            <td style="width:21px">
-                <label><input type="checkbox"></label>
-            </td>
-        </tr>
-        </tfoot>
-        <tbody>
-        <!-- BDP: mail_account -->
-        <tr>
-            <td>
-                <!--email_off-->
-                <span class="icon i_mail_icon">{MAIL_ACCOUNT_ADDR}</span>
-                <!--/email_off-->
-                <!-- BDP: mail_account_autoresponder -->
-                <div>
-                    <?= tohtml(tr('Autoresponder')); ?>:
-                    <!-- BDP: mail_account_autoresponder_activation_link -->
-                    <a href="mail_autoresponder_enable.php?id={MAIL_ACCOUNT_ID}" class="icon i_reload" title="<?= tohtml(tr('Activate', 'htmlAttr')); ?>"><?= tohtml(tr('Activate')); ?></a>
-                    <!-- EDP: mail_account_autoresponder_activation_link -->
-                    <!-- BDP: mail_account_autoresponder_deactivation_link -->
-                    <a href="mail_autoresponder_disable.php?id={MAIL_ACCOUNT_ID}" class="icon i_reload" title="<?= tohtml(tr('Deactivate', 'htmlAttr')); ?>"><?= tohtml(tr('Deactivate')); ?></a>
-                    <!-- EDP: mail_account_autoresponder_deactivation_link -->
-                    <a href="mail_autoresponder_edit.php?id={MAIL_ACCOUNT_ID}" class="icon i_edit" title="<?= tohtml(tr('Edit', 'htmlAttr')); ?>"><?= tohtml(tr('Edit')); ?></a>
-                </div>
-                <!-- EDP: mail_account_autoresponder -->
-            </td>
-            <td>
-                <strong>{MAIL_ACCOUNT_TYPE}</strong>
-                <!-- BDP: mail_account_forward_list -->
-                <!--email_off-->
-                <br><span class="tips" title="{MAIL_ACCOUNT_LONG_FORWARD_LIST}">{MAIL_ACCOUNT_SHORT_FORWARD_LIST}</span>
-                <!--/email_off-->
-                <!-- EDP: mail_account_forward_list -->
-            </td>
-            <td>
-                <!-- BDP: mail_account_no_quota_warning -->
-                {MAIL_ACCOUNT_QUOTA_INFO}
-                <!-- EDP: mail_account_no_quota_warning -->
-                <!-- BDP: mail_account_quota_warning -->
-                <span style="color:red">{MAIL_ACCOUNT_QUOTA_INFO}</span>
-                <!-- EDP: mail_account_quota_warning -->
-            </td>
-            <td>{MAIL_ACCOUNT_STATUS}</td>
-            <td>
-                <!-- BDP: mail_account_action_links -->
-                <!-- BDP: mail_account_edit_link -->
-                <a href="mail_edit.php?id={MAIL_ACCOUNT_ID}" class="icon i_edit" title="<?= tohtml(tr('Edit'), 'htmlAttr'); ?>"><?= tohtml(tr('Edit')); ?></a>
-                <!-- EDP: mail_account_edit_link -->
-                <!-- BDP: mail_account_delete_link -->
-                <a href="mail_delete.php?id={MAIL_ACCOUNT_ID}" class="icon i_delete" onclick="return action_delete(this, '<?= tojs(tr('mail')); ?>')" title="<?= tohtml(tr('Delete'), 'htmlAttr'); ?>"><?= tohtml(tr('Delete')); ?></a>
-                <!-- EDP: mail_account_delete_link -->
-                <!-- BDP: mail_catchall_account_delete_link -->
-                <a href="mail_catchall_delete.php?id={MAIL_ACCOUNT_ID}" class="icon i_delete" onclick="return action_delete(this, '<?= tojs(tr('catch-all')); ?>')" title="<?= tohtml(tr('Delete'), 'htmlAttr'); ?>"><?= tohtml(tr('Delete')); ?></a>
-                <!-- EDP: mail_catchall_account_delete_link -->
-                <!-- BDP: mail_protected_mail_account -->
-                <span class="icon i_lock" title="<?= tohtml(tr('This mail account is protected against both edition and deletion.'), 'htmlAttr'); ?>"></span>
-                <!-- EDP: mail_protected_mail_account -->
-                <!-- EDP: mail_account_action_links -->
-            </td>
-            <td>
-                <label><input type="checkbox" name="id[]" value="{MAIL_ACCOUNT_ID}"{MAIL_ACCOUNT_DISABLED_DELETION_CHECKBOX}></label>
-            </td>
-        </tr>
-        <!-- EDP: mail_account -->
-        </tbody>
-        <tbody>
-        <tr style="background-color:#b0def5">
-            <td colspan="6">
-                <div class="buttons">
-                    <!-- BDP: mail_show_default_mail_accounts_link -->
-                    <a href="/client/mail_accounts.php?show_default_mail_accounts=1" title="<?= tohtml(tr('Show default mail accounts'), 'htmlAttr');?>" class="link_as_button"><?= tohtml(tr('Show default mail accounts')) ;?></a>
-                    <!-- EDP: mail_show_default_mail_accounts_link -->
-                    <!-- BDP: mail_hide_default_mail_accounts_link -->
-                    <a href="/client/mail_accounts.php?show_default_mail_accounts=0" title="<?= tohtml(tr('Hide default mail accounts'), 'htmlAttr');?>" class="link_as_button"><?= tohtml(tr('Hide default mail accounts')); ?></a>
-                    <!-- EDP: mail_hide_default_mail_accounts_link -->
-                    <!-- BDP: mail_sync_quota_info_link -->
-                    <a href="/client/mail_accounts.php?sync_quota_info=1" title="<?= tohtml(tr('Force synching of mailboxes quota info. Quota info are automatically synced every 5 minutes.'), 'htmlAttr');?>" class="link_as_button"><?= tohtml(tr('Sync quota info')); ?></a>
-                    <!-- EDP: mail_sync_quota_info_link -->
-                    <!-- BDP: mail_delete_selected_items_button -->
-                    <input type="submit" name="Submit" value="<?= tr('Delete selected mail accounts', 'htmlAttr');?>">
-                    <!-- EDP: mail_delete_selected_items_button -->
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="sectionBox table">
+        <header>
+            <h3>{TR_TITLE}</h3>
+        </header>
+        <table data-dataTable='<?=getDataTablesPluginTranslations(); ?>'>
+            <thead class="middle">
+                <th class="shrink">
+                    <label class="checkbox noMargin">
+                        <input type="checkbox">
+                        <span></span>
+                    </label>
+                </th>
+                <th><?= tohtml(tr('Mail')); ?></th>
+                <th><?= tohtml(tr('Type')); ?></th>
+                <th><?= tohtml(tr('Quota info')); ?></th>
+                <th><?= tohtml(tr('Status')); ?></th>
+                <th></th>
+            </thead>
+            <tbody>
+                <!-- BDP: mail_account -->
+                <tr>
+                    <td class="shrink">
+                        <label class="checkbox noMargin">
+                            <input type="checkbox" name="id[]" value="{MAIL_ACCOUNT_ID}"{MAIL_ACCOUNT_DISABLED_DELETION_CHECKBOX}>
+                            <span></span>
+                        </label>
+                    </td>
+                    <td>
+                        <!--email_off-->
+                        <div>{MAIL_ACCOUNT_ADDR}</div>
+                        <!--/email_off-->
+                        <!-- BDP: mail_account_autoresponder -->
+                        <small>
+                            <?= tohtml(tr('Autoresponder')); ?>:
+                            <!-- BDP: mail_account_autoresponder_activation_link -->
+                            <a href="mail_autoresponder_enable.php?id={MAIL_ACCOUNT_ID}" class="icon i_reload" title="<?= tohtml(tr('Activate', 'htmlAttr')); ?>"><?= tohtml(tr('Activate')); ?></a>
+                            <!-- EDP: mail_account_autoresponder_activation_link -->
+                            <!-- BDP: mail_account_autoresponder_deactivation_link -->
+                            <a href="mail_autoresponder_disable.php?id={MAIL_ACCOUNT_ID}" class="icon i_reload" title="<?= tohtml(tr('Deactivate', 'htmlAttr')); ?>"><?= tohtml(tr('Deactivate')); ?></a>
+                            <!-- EDP: mail_account_autoresponder_deactivation_link -->
+                            <a href="mail_autoresponder_edit.php?id={MAIL_ACCOUNT_ID}" class="icon i_edit" title="<?= tohtml(tr('Edit', 'htmlAttr')); ?>"><?= tohtml(tr('Edit')); ?></a>
+                        </small>
+                        <!-- EDP: mail_account_autoresponder -->
+                    </td>
+                    <td>
+                        <strong>{MAIL_ACCOUNT_TYPE}</strong>
+                        <!-- BDP: mail_account_forward_list -->
+                        <!--email_off-->
+                        <div class="tooltip-entry">
+                            <span class="tooltip-circle" data-tooltip="{MAIL_ACCOUNT_LONG_FORWARD_LIST}">
+                                <i data-eva="question-mark-circle"></i>
+                            </span>
+                            {MAIL_ACCOUNT_SHORT_FORWARD_LIST}
+                        </div>
+                        <!--/email_off-->
+                        <!-- EDP: mail_account_forward_list -->
+                    </td>
+                    <td>
+                        <!-- BDP: mail_account_no_quota_warning -->
+                        {MAIL_ACCOUNT_QUOTA_INFO}
+                        <!-- EDP: mail_account_no_quota_warning -->
+                        <!-- BDP: mail_account_quota_warning -->
+                        <span>{MAIL_ACCOUNT_QUOTA_INFO}</span>
+                        <!-- EDP: mail_account_quota_warning -->
+                    </td>
+                    <td>{MAIL_ACCOUNT_STATUS}</td>
+                    <td>
+                        <!-- BDP: mail_account_action_links -->
+                        <div class="action-column">
+                            <div ref="dropdown" class="dropdown">
+                                <span>
+                                    <i></i>
+                                </span>
+                                <ul>
+                                    <!-- BDP: mail_account_edit_link -->
+                                    <li><a href="mail_edit.php?id={MAIL_ACCOUNT_ID}" title="<?= tohtml(tr('Edit'), 'htmlAttr'); ?>"><?= tohtml(tr('Edit')); ?></a></li>
+                                    <!-- EDP: mail_account_edit_link -->
+                                    <!-- BDP: mail_account_delete_link -->
+                                    <li class="delete"><a href="mail_delete.php?id={MAIL_ACCOUNT_ID}" onclick="return action_delete(this, '<?= tojs(tr('mail')); ?>')" title="<?= tohtml(tr('Delete'), 'htmlAttr'); ?>"><?= tohtml(tr('Delete')); ?></a></li>
+                                    <!-- EDP: mail_account_delete_link -->
+                                    <!-- BDP: mail_catchall_account_delete_link -->
+                                    <li class="delete"><a href="mail_catchall_delete.php?id={MAIL_ACCOUNT_ID}" onclick="return action_delete(this, '<?= tojs(tr('catch-all')); ?>')" title="<?= tohtml(tr('Delete'), 'htmlAttr'); ?>"><?= tohtml(tr('Delete')); ?></a></li>
+                                    <!-- EDP: mail_catchall_account_delete_link -->
+                                </ul>
+                            </div>
+                            <!-- BDP: mail_protected_mail_account -->
+                            <span class="tooltip-circle" data-tooltip="<?=tohtml(tr('This mail account is protected against both edition and deletion.'), 'htmlAttr'); ?>">
+                                <i data-eva="lock"></i>
+                            </span>
+                            <!-- EDP: mail_protected_mail_account -->
+                        </div>
+                        <!-- EDP: mail_account_action_links -->
+                    </td>
+                </tr>
+                <!-- EDP: mail_account -->
+            </tbody>
+        </table>
+        <footer class="align-right">
+            <div><?=tohtml(tr('Total accounts: %s / %s', '{MAIL_TOTAL_MAIL_ACCOUNTS}', '{MAIL_ACCOUNTS_LIMIT}')); ?></div>
+            <div class="align-right">
+                <!-- BDP: mail_show_default_mail_accounts_link -->
+                <a href="/client/mail_accounts.php?show_default_mail_accounts=1" title="<?=tohtml(tr('Show default mail accounts'), 'htmlAttr');?>" class="btn sm muted"><?=tohtml(tr('Show default mail accounts')) ;?></a>
+                <!-- EDP: mail_show_default_mail_accounts_link -->
+                <!-- BDP: mail_hide_default_mail_accounts_link -->
+                <a href="/client/mail_accounts.php?show_default_mail_accounts=0" title="<?=tohtml(tr('Hide default mail accounts'), 'htmlAttr');?>" class="btn sm muted"><?=tohtml(tr('Hide default mail accounts')); ?></a>
+                <!-- EDP: mail_hide_default_mail_accounts_link -->
+                <!-- BDP: mail_sync_quota_info_link -->
+                <a href="/client/mail_accounts.php?sync_quota_info=1" title="<?=tohtml(tr('Force synching of mailboxes quota info. Quota info are automatically synced every 5 minutes.'), 'htmlAttr');?>" class="btn sm muted"><?=tohtml(tr('Sync quota info')); ?></a>
+                <!-- EDP: mail_sync_quota_info_link -->
+                <!-- BDP: mail_delete_selected_items_button -->
+                <input class="btn sm" type="submit" name="Submit" value="<?=tr('Delete selected mail accounts', 'htmlAttr');?>">
+                <!-- EDP: mail_delete_selected_items_button -->
+            </div>
+        </footer>
+    </div>
 </form>
 <!-- EDP: mail_accounts -->
 <!-- EDP: mail_feature -->
