toggle column for tables

--- a/themes/next/client/mail_accounts.phtml
+++ b/themes/next/client/mail_accounts.phtml
@@ -48,7 +48,7 @@
         </header>
         <table data-dataTable='<?=getDataTablesPluginTranslations(); ?>'>
             <thead class="middle">
-                <th class="shrink">
+                <th class="toggle">
                     <label class="checkbox noMargin">
                         <input type="checkbox">
                         <span></span>
@@ -63,7 +63,7 @@
             <tbody>
                 <!-- BDP: mail_account -->
                 <tr>
-                    <td class="shrink">
+                    <td class="toggle">
                         <label class="checkbox noMargin">
                             <input type="checkbox" name="id[]" value="{MAIL_ACCOUNT_ID}"{MAIL_ACCOUNT_DISABLED_DELETION_CHECKBOX}>
                             <span></span>
