--- a/themes/next/assets/scss/components/table.scss
+++ b/themes/next/assets/scss/components/table.scss
@@ -123,6 +123,10 @@
                 padding-left: 12px;
                 padding-right: 12px;
             }
+            &.toggle {
+                width: 1%;
+                padding-right: 0;
+            }
         }
         thead {
             @include max(xs) {
